# telegram-stories-scheduler

./: .env.example  .gitignore  LICENSE  README.md  alembic.ini  pyproject.toml
.github/workflows/: ci.yml
app/: __init__.py  cli.py  launcher.py
app/auth/: __init__.py  cli.py  service.py
app/bot/: __init__.py  access.py  cli.py  date_formats.py  media_ingress.py  router.py  runtime.py
app/config/: logging.py  process_lock.py  runtime.py  settings.py
app/db/: bootstrap.py  models.py  session.py
app/media/: __init__.py  ffmpeg.py  photos.py  service.py  videos.py
app/scheduler/: __init__.py  rules.py  service.py
app/telegram/: __init__.py  (+6 more)
migrations/: env.py
scripts/: auth.bat  auth.py  bot.bat  bot.py  build_executables.py  build_windows_exe.bat  build_windows_via_wine.sh  stories.bat  worker.bat  worker.py
tests/: conftest.py  test_auth_cli.py  test_auth_service.py  test_bot_cli.py  test_bot_date_formats.py  test_bot_media_ingress.py  test_bot_presenters.py  test_bot_router.py  test_bot_runtime.py  test_build_executables.py  test_cli.py  test_connectivity_logging.py  test_create_story_handler.py  test_delete_job_handler.py  test_launcher.py  test_launcher_runtime.py  test_list_jobs_handler.py  test_manual_send_handler.py  test_media_pipeline.py  test_runtime.py  test_scheduler_rules.py  test_settings_resilience.py  test_settings_runtime_paths.py  test_story_dispatch_service.py  test_story_job_service.py  test_story_repository.py  test_telegram_bootstrap.py  test_telegram_client.py  test_telegram_runtime.py  test_worker_cli.py  test_worker_service.py
(+16 files in other folders)
